# XrayMultifitting

source/: CMakeLists.txt
source/calculation/fitting/: fitting.cpp  fitting.h
